# ChoreBoss

./: .dockerignore  .env.example  .gitignore  3_REMAINING_DECISIONS.md  AGENTS.md  ALEMBIC_GUIDE.md  ALL_DECISIONS_LOCKED_READY_TO_BUILD.md  API_LOGS_FAQ.md  API_RATE_LIMITS.md  AUDIT_INDEX_20260503.md  COMMIT_SUMMARY.md  COMPLETION_LOG.md  COMPLETION_SUMMARY.md  CORRECTED_PATH_SUMMARY.md  CRITICAL_5M_BARS_VALIDATION_FOUNDATION.md  DECISION_LOCKED_VALIDATE_FIRST.md  DEPLOYMENT_CHECKLIST_COMPLETE.md  DEPLOYMENT_SKILL.md  DEPLOYMENT_SUCCESS_REPORT.md  DEVELOPMENT_BEST_PRACTICES.md  DEVELOPMENT_OCP_ROUTINE_PROPOSAL.md  DEVELOPMENT_WORKFLOW.md  DOCKER_CLI_29_REFERENCE.md  DOCKER_CONFIG_AUDIT.md  DOCKER_FULLSTACK_TEMPLATE.md  DOCUMENTATION_VERIFICATION_ROUTINE.md  DREAMS.md  Dockerfile  ENVESTERO-FASTTRACK.md  ENVESTERO-PHASE2-SUMMARY.md  ENVESTERO-PROGRESS.md  ENVESTERO_CRON_JOBS_REFERENCE.md  ENVESTERO_CRON_SETUP_GUIDE.md  ENVESTERO_DOCKER_CLEANUP.md  ENVESTERO_INTELLIGENCE_MODEL_SUMMARY.md  ENVESTERO_SCHEDULER_OPTIMIZATION_20260503.md  EVSO-SESSION-SUMMARY-20260504.md  EVSO-TIER1-2-COMPLETE-20260504.md  FILES_UPDATED_CHECKLIST.md  FILE_VERIFICATION_CHECKLIST.md  (+126 more)
.copilot/: copilot-instructions.md
.openclaw/: CURRENT_STATUS.md  MEMORY_ORGANIZATION_ARCHITECTURE.md  README.md  workspace-state.json
INV_TOAN/: CURRENT_STATUS.md  TASKS.md
KIDS_01/: CURRENT_STATUS.md  README.md
api/: __init__.py  main.py
choreboss/: __init__.py  config.py  setup_services.py
extraction-drafts/: envestero-test_20260425_023237.json  envestero-test_20260425_023248.json  (+4 more)
frontend/: README.md  (+3 more)
(+326 files in other folders)
