[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "choreboss"
version = "2.0.0"
description = "FastAPI household chore tracker with React frontend"
authors = [{name = "Toan Nguyen"}]
requires-python = ">=3.14"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
]

[tool.poetry.dependencies]
python = "^3.14"
# Backend
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
bcrypt = "^4.2.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.24.0"
ruff = "^0.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["choreboss", "api"]
